--- a/PROJECT/about.html
+++ b/PROJECT/about.html
@@ -51,34 +51,54 @@
 <section class="about-holder">
     <article class="about">
         <h1>About Us</h1>
+        <br>
         <p>Discover Our Company! We're your go-to destination for cutting-edge IT solutions crafted to elevate businesses across diverse industries. With a focus on innovation and reliability, we specialize in providing tailored services to optimize efficiency and drive growth. Whether you're a startup or a large corporation, our experienced team is committed to delivering solutions aligned with your unique goals. Trust us to navigate the dynamic world of technology with excellence and customer satisfaction at the forefront.</p>
     </article>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </section>
-<section class="footer-widget-holder">
-    <div class="footer-widget">
-        <a href="#">
-            <img src="img/logo.png" alt="Great Company">
-        </a>
-        <H3>Adress</H3>
-        <address>
-            Conveniently located in the heart of Timisoara, our company's headquarters serve as a hub for innovation and collaboration. Situated in a vibrant business district, our address provides easy access for clients and partners alike, fostering seamless communication and interaction within the bustling cityscape. With state-of-the-art facilities and a dynamic work environment, our office space reflects our commitment to excellence and customer satisfaction. Whether you're visiting for a consultation, project kickoff meeting, or training session, you'll find our location in Timisoara to be both accessible and conducive to productive discussions. We look forward to welcoming you to our address and embarking on a journey of technological advancement together in this vibrant city.
-        </address>
+<footer class="footer">
+    <div class="waves">
+      <div class="wave" id="wave1"></div>
+      <div class="wave" id="wave2"></div>
+      <div class="wave" id="wave3"></div>
+      <div class="wave" id="wave4"></div>
     </div>
-    <div class="footer-widget">
-        <h4>Sitemap</h4>
-        <ul>
-       <li><a href="#">Home</a></li>
-       <li><a href="#">Services</a></li>
-       <li><a href="#">Products</a></li>
-       <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-     </ul>
-    </div>
-</section>
+    <ul class="social-icon">
+      <li class="social-icon__item"><a class="social-icon__link" href="#">
+          <ion-icon name="logo-facebook"></ion-icon>
+        </a></li>
+      <li class="social-icon__item"><a class="social-icon__link" href="#">
+          <ion-icon name="logo-twitter"></ion-icon>
+        </a></li>
+      <li class="social-icon__item"><a class="social-icon__link" href="#">
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a></li>
+      <li class="social-icon__item"><a class="social-icon__link" href="#">
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a></li>
+    </ul>
+    <ul class="menu">
+        <li class="menu__item"><a class="menu__link" href="index.html">Home</a></li>
+        <li class="menu__item"><a class="menu__link" href="about.html">About</a></li>
+        <li class="menu__item"><a class="menu__link" href="services.html">Services</a></li>
+        <li class="menu__item"><a class="menu__link" href="products.html">Products</a></li>
+        <li class="menu__item"><a class="menu__link" href="contact.html">Contact</a></li>
 
-<footer class="site-footer">
-    <p><small>Copyright &copy; 2024, Bejera Paula-Vanina</small></p>
- </footer>
+    </ul>
+    <p>&copy;2024 Bejera Paula-Vanina | All Rights Reserved</p>
+  </footer>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</body>
+
+
 </div>
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
